# aerokit-c

./: Makefile  README.md  aerokit.c  meson.build  plot.info
data/: tst.csv
src/application/: asen3111_ca1_p1.c  asen3111_ca1_p1.h
src/core/: allocator.h  numerical_integration.c  numerical_integration.h  utils.h
src/display/: init.c  init.h
tests/application/: test_asen3111_ca1_p1.c
tests/core/: test_numerical_integration.c
